@@ -3,13 +3,15 @@ beers-law-lab.name=Beer's Law Lab
 
 absorbance=Absorbance
 concentration=Concentration
-beam=Beam
+beam=beam
 evaporation=Evaporation
 koolAid=Kool-Aid\u00ae
+lambdaMax=<html>\u03bb<sub>max</sub></html>
 lots=lots
+manual=manual
 none=none
 percentTransmittance=% Transmittance
-photons=Photons
+photons=photons
 removeSolute=Remove Solute
 saturated=Saturated!
 solid=Solid
